update fetch to template literals to take in the props for pokemon id. extract pokemon id from search by name or id.

--- a/src/mobilecomponents/pokidex/Pokidex.css
+++ b/src/mobilecomponents/pokidex/Pokidex.css
@@ -1,6 +1,6 @@
 .pokedex-container {
   background-color: red;
-  height: 200px;
+  height: 150px;
 }
 
 .lighting-container {
@@ -20,6 +20,7 @@
   display: inline-block;
   outline: solid;
   outline-width: 7.5px;
+  outline-color: silver;
 }
 
 .lighting-one{
