--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 .App {
   text-align: center;
+  background-color: red;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.searchbar-component {
+  position: absolute;
+  top: 70px;
+  left: 33%;
+  transform: translateX(-10%);
+  width: 80%
+}
+
+.imagebox-component{
+  margin-top: 40px;
 }
