--- a/src/mobilecomponents/infobox/InfoBox.css
+++ b/src/mobilecomponents/infobox/InfoBox.css
@@ -3,8 +3,10 @@
   margin-top: 30px;
   background-color: lightgreen;
   width: 340px;
-  align-items: center;
+  height: 300px;
+  align-items: left;
   flex-direction: column;
   border-radius: 10px;
   text-align: left;
+  padding-left: 15px;
 }
