update component to display evolution chain, not yet deployed.

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,11 @@
   justify-content: center;
 }
 
+.evolution-component{
+  display: flex;
+  justify-content: center;
+}
+
 html,
 body,
 body > div,
