--- a/src/mobilecomponents/infobox/InfoBox.css
+++ b/src/mobilecomponents/infobox/InfoBox.css
@@ -8,7 +8,7 @@
   max-height: 300px;
   align-items: left;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
   text-align: left;
   padding-left: 10px;
   padding-right: 15px;
