--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,11 @@
   margin-left: 20px;
   transform: translateX(10%);
   width: 80%;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
 }
 
 .imagebox-component {
-  margin-top: 30px;
+  margin-top: 25px;
   display: flex;
   justify-content: center;
 }
@@ -31,6 +31,7 @@
 .infobox-component {
   display: flex;
   justify-content: center;
+  margin-top: -10px !important;
 }
 
 .evolution-component{
